<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/ru.biovamp.circlelayoutexample"
    android:id="@+id/lay_parent_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_bg_cream"
    android:gravity="center" >

     <corp.seedling.numbersgoround.ui.CustomTextViewHelp
        android:id="@+id/tv_help_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/help_1"
        android:layout_margin="10dip"
        />
    
    
    <FrameLayout
        android:id="@+id/lay_circle_help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="10dp" >
    </FrameLayout>

    <corp.seedling.numbersgoround.ui.CustomTextView
        android:id="@+id/tv_center_help"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="27"
        android:background="@drawable/circle_yellow"
        android:layout_centerInParent="true" />
    
    <corp.seedling.numbersgoround.ui.CustomTextView
        android:id="@+id/tv_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rect_yellow"
        android:padding="5dp"
        android:text="@string/got_it"
         />

     <corp.seedling.numbersgoround.ui.CustomTextViewHelp
        android:id="@+id/tv_help_title3"
        android:layout_above="@id/tv_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/help_2"
        android:layout_margin="5dip"
        />
    
</RelativeLayout>