<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_game_over_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_bg_cream"
    android:gravity="center"
    android:orientation="vertical" >



        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="200dip"
            android:layout_height="1dip"
            android:layout_marginTop="10dip"
            android:background="#5b717c" >
        </LinearLayout>
        
        <corp.seedling.numbersgoround.ui.CustomTextViewAns 
            android:id="@+id/tv_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="200dip"
            android:layout_height="1dip"
            android:background="#5b717c" >
        </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/lay_panel1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lay_score_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_score"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_pink"
                    android:text="13" />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_highscore_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_high_score"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_blue_royal"
                    android:text="34" />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_high_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/best" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_leaderboard_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_leaderboard"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_leaderboard" />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_leaderboard_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/top_scorers" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_panel2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lay_restart_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_restart"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_play" />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_restart_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/play_again" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_dict_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_dict"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_share"
                     />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_dict_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/share" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_achieve_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <corp.seedling.numbersgoround.ui.CustomTextView
                    android:id="@+id/tv_achieve"
                    android:layout_width="@dimen/tv_width_gameover_screen"
                    android:layout_height="@dimen/tv_height_gameover_screen"
                    android:layout_margin="@dimen/tv_margin_ans"
                    android:background="@drawable/circle_achievements" />

                <corp.seedling.numbersgoround.ui.CustomTextViewHeading
                    android:id="@+id/tv_achieve_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/achievements" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>